# Sejong-Downloader

./: .gitignore  README.md  pyproject.toml  sejong_dl.py
